<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentpremiospadre"
    android:background="@drawable/fondofragmentos">


    <TextView
        android:id="@+id/textobienvenido3"
        android:layout_width="355dp"
        android:layout_height="90dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="28dp"
        android:text="@string/añadir_premio_hijos"
        android:textColor="#0019FF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/labelnombre"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="167dp"
        android:textColorHint="#0019FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittextnombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduce_nombre_premio"
            android:textColor="#13D6C6" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombreintroducidolabel"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="267dp"
        android:layout_marginEnd="1dp"
        android:textColorHint="#0019FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittextddesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduce_desc_premio"
            android:textColor="#13D6C6" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/labelpremio"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="367dp"
        android:layout_marginEnd="1dp"
        android:textColorHint="#0019FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittextpremio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduce_precio_premio"
            android:textColor="#13D6C6" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/botonconfirmar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="154dp"
        android:background="#0019FF"
        android:padding="10dp"
        android:text="@string/a_adir_premio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>