<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentiniciopadre"
    android:background="@drawable/fondofragmentos">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="283dp"
        android:layout_height="162dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/familias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="411dp"
        android:layout_height="152dp"
        android:fontFamily="cursive"
        android:paddingTop="110px"
        android:text="@string/bienvenido"
        android:textAlignment="center"
        android:textColor="#0019FF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="411dp"
        android:layout_height="152dp"
        android:layout_marginTop="152dp"
        android:fontFamily="casual"
        android:padding="7px"
        android:text="@string/Tutorial"
        android:textAlignment="center"
        android:textColor="#0019FF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botoncomparte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:background="#1804FD"
        android:padding="10dp"
        android:text="@string/compartir_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>